<resources>
    <string name="app_name">KT_Study</string>
    <string name="btn_text_kt_study_test">Study Test</string>

    <string name="btn_text_coroutine_title">Coroutine Study</string>
    <string name="btn_text_coroutine_blocking">Blocking</string>
    <string name="btn_text_coroutine_blocking_cancel">cancel</string>

    <string name="btn_text_coroutine_init">init</string>
    <string name="btn_text_coroutine_start">launch</string>
    <string name="btn_text_coroutine_cancel">cancel</string>
    <string name="btn_test_context">context</string>
    <string name="btn_test_launch_mode">launchMode</string>
    <string name="btn_test_suspend">suspend</string>
    <string name="btn_test_async">async</string>
    <string name="btn_test_finally">finally</string>
    <string name="btn_test_time_out">time out</string>
    <string name="btn_test_combined">combined suspend</string>
    <string name="btn_test_channel">channel</string>
    <string name="btn_test_async_stream">Async Stream</string>
    <string name="tv_title_kotlin">Kotlin 学习</string>
    <string name="et_hint_name">请输入姓名</string>
    <string name="et_hint_sex">请输入性别</string>
    <string name="et_hint_age">请输入年龄</string>


</resources>